--- a/amazon.html
+++ b/amazon.html
@@ -23,9 +23,9 @@
       <div class="amazon-header-left-section">
         <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
-            src="images/amazon-logo-white.png">
+            src="images/headrer logo.jpeg">
           <img class="amazon-mobile-logo"
-            src="images/amazon-mobile-logo-white.png">
+            src="images/headrer logo.jpeg">
         </a>
       </div>
 
@@ -45,17 +45,17 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity js-cart">0</div>
+          <div class="cart-quantity js-cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
     </div>
-    
-    <div class="main">
-      <div class="products-grid js-products-grid"></div>
 
+    <div class="main">
+      <div class="products-grid js-products-grid">
+      </div>
     </div>
-    
-    <script  type="module" src="scripts/amazon.js"> </script>
+
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
