--- a/checkout.html
+++ b/checkout.html
@@ -43,8 +43,7 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary js_order">
-         
+        <div class="order-summary js-order-summary">
         </div>
 
         <div class="payment-summary">
@@ -85,6 +84,5 @@
     </div>
 
     <script type="module" src="scripts/checkout.js"></script>
-
   </body>
 </html>
