checkout page edited

--- a/orders.html
+++ b/orders.html
@@ -24,9 +24,9 @@
       <div class="amazon-header-left-section">
         <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
-            src="images/amazon-logo-white.png">
+            src="images/headrer logo.jpeglogo.jpeg">
           <img class="amazon-mobile-logo"
-            src="images/amazon-mobile-logo-white.png">
+            src="images/headrer logo.jpeg">
         </a>
       </div>
 
@@ -65,7 +65,7 @@
               </div>
               <div class="order-total">
                 <div class="order-header-label">Total:</div>
-                <div>$35.06</div>
+                <div>$1327.4</div>
               </div>
             </div>
 
@@ -77,12 +77,12 @@
 
           <div class="order-details-grid">
             <div class="product-image-container">
-              <img src="images/products/athletic-cotton-socks-6-pairs.jpg">
+              <img src="images/products/Blazer Masculino 1.jpeg">
             </div>
 
             <div class="product-details">
               <div class="product-name">
-                Black and Gray Athletic Cotton Socks - 6 Pairs
+                Peter England Men Slim Fit Blazer
               </div>
               <div class="product-delivery-date">
                 Arriving on: August 15
@@ -105,12 +105,12 @@
             </div>
 
             <div class="product-image-container">
-              <img src="images/products/adults-plain-cotton-tshirt-2-pack-teal.jpg">
+              <img src="images/products/atshirt 1.jpeg">
             </div>
 
             <div class="product-details">
               <div class="product-name">
-                Adults Plain Cotton T-Shirt - 2 Pack
+                Allen Solly Casual T-Shirts
               </div>
               <div class="product-delivery-date">
                 Arriving on: August 19
@@ -144,7 +144,7 @@
               </div>
               <div class="order-total">
                 <div class="order-header-label">Total:</div>
-                <div>$41.90</div>
+                <div>$24.65</div>
               </div>
             </div>
 
@@ -156,12 +156,12 @@
 
           <div class="order-details-grid">
             <div class="product-image-container">
-              <img src="images/products/intermediate-composite-basketball.jpg">
+              <img src="images/products/pant 1.jpeg">
             </div>
 
             <div class="product-details">
               <div class="product-name">
-                Intermediate Size Basketball
+                Mens Casual Pant
               </div>
               <div class="product-delivery-date">
                 Arriving on: June 17
