--- a/amazon.html
+++ b/amazon.html
@@ -44,9 +44,9 @@
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
-          <img class="cart-icon" src="images/icons/cart-icon.png">
+          <img class="cart-icon" src="images/icons/cartlogo2.jpeg">
           <div class="cart-quantity js-cart-quantity">0</div>
-          <div class="cart-text">Cart</div>
+          <div class="cart-text"></div>
         </a>
       </div>
     </div>
