--- a/checkout.html
+++ b/checkout.html
@@ -23,8 +23,8 @@
       <div class="header-content">
         <div class="checkout-header-left-section">
           <a href="amazon.html">
-            <img class="amazon-logo" src="images/headrer logo.jpeg">
-            <img class="amazon-mobile-logo" src="images/headrer logo.jpeg">
+            <img class="amazon-logo" src="images/headrer logo.jpeg " alt="">
+            <img class="amazon-mobile-logo" src="images/headrer logo.jpeg" alt="">
           </a>
         </div>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="checkout-header-right-section">
-          <img src="images/icons/checkout-lock-icon.png">
+          <img src="images/icons/checkout-lock-icon.png" alt="">
         </div>
       </div>
     </div>
