--- a/orders.html
+++ b/orders.html
@@ -24,7 +24,7 @@
       <div class="amazon-header-left-section">
         <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
-            src="images/headrer logo.jpeglogo.jpeg">
+            src="images/headrer logo.jpeg">
           <img class="amazon-mobile-logo"
             src="images/headrer logo.jpeg">
         </a>
